test/expected/large/dataminingresults/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: mnresults
    foo.com/duversion: 22.11.49-20190921.1569051170585
    foo.com/version: 22.11.49
  labels:
    app.kubernetes.io/name: dataminingresults
    helm.sh/chart: dataminingresults-22.11.49
  name: dataminingresults
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dataminingresults
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dataminingresults
        app.kubernetes.io/name: dataminingresults
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/mlrning-125.0.0-x64_redhat_linux_7-docker-prod/foo-results:22.11.49-20190921.1569051170585
        imagePullPolicy: IfNotPresent
        name: dataminingresults
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      initContainers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        image: docker.foo.com/yesbut/init-blocker:1.7
        name: init-blocker
